# AlgGeom

./: README.md  _CoqProject  coq-hott-alggeom.opam  dune-project
theories/: Invertible.v  Localization.v  RingsExtra.v  dune
